other/verify-image-ivpol/.chainsaw-test/bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-pod
spec:
  containers:
    - name: test-container
      image: 'ghcr.io/kyverno/test-verify-image:unsigned'
      imagePullPolicy: Always
