other/verify-image-ivpol/.chainsaw-test/exception-sibling-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unsigned-unexcepted-sibling
  namespace: default
spec:
  containers:
  - name: test-container
    image: ghcr.io/kyverno/test-verify-image:unsigned
    imagePullPolicy: Always
