other/verify-image-ivpol/.chainsaw-test/exception-wrong-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: verify-image-other-ns
