other/verify-image-ivpol/.chainsaw-test/good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed-pod
spec:
  containers:
    - name: test-container
      image: 'ghcr.io/kyverno/test-verify-image:signed'
      imagePullPolicy: Always
