other/verify-image-ivpol/.chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ImageValidatingPolicy
metadata:
  name: verify-image-ivpol
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
    - reason: Succeeded
      status: "True"
    (conditions[?type == 'WebhookConfigured']):
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
